--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DemoTanque</string>
     <string name="button">Button</string>
     <string name="button2">Button2</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
